; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-source.c_ffmpeg_source_tick.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-source.c_ffmpeg_source_tick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ffmpeg_source = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, float)* @ffmpeg_source_tick to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ffmpeg_source_tick(i8* %0, float %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca float, align 4
  %5 = alloca %struct.ffmpeg_source*, align 8
  store i8* %0, i8** %3, align 8
  store float %1, float* %4, align 4
  %6 = load float, float* %4, align 4
  %7 = call i32 @UNUSED_PARAMETER(float %6)
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to %struct.ffmpeg_source*
  store %struct.ffmpeg_source* %9, %struct.ffmpeg_source** %5, align 8
  %10 = load %struct.ffmpeg_source*, %struct.ffmpeg_source** %5, align 8
  %11 = getelementptr inbounds %struct.ffmpeg_source, %struct.ffmpeg_source* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %28

14:                                               ; preds = %2
  %15 = load %struct.ffmpeg_source*, %struct.ffmpeg_source** %5, align 8
  %16 = getelementptr inbounds %struct.ffmpeg_source, %struct.ffmpeg_source* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %14
  %20 = load %struct.ffmpeg_source*, %struct.ffmpeg_source** %5, align 8
  %21 = getelementptr inbounds %struct.ffmpeg_source, %struct.ffmpeg_source* %20, i32 0, i32 2
  %22 = call i32 @mp_media_free(i32* %21)
  %23 = load %struct.ffmpeg_source*, %struct.ffmpeg_source** %5, align 8
  %24 = getelementptr inbounds %struct.ffmpeg_source, %struct.ffmpeg_source* %23, i32 0, i32 1
  store i32 0, i32* %24, align 4
  br label %25

25:                                               ; preds = %19, %14
  %26 = load %struct.ffmpeg_source*, %struct.ffmpeg_source** %5, align 8
  %27 = getelementptr inbounds %struct.ffmpeg_source, %struct.ffmpeg_source* %26, i32 0, i32 0
  store i32 0, i32* %27, align 4
  br label %28

28:                                               ; preds = %25, %2
  ret void
}

declare dso_local i32 @UNUSED_PARAMETER(float) #1

declare dso_local i32 @mp_media_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
